--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,500,700|Playfair+Display:700" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+		<link rel="shortcut icon" href="./dist/images/home.ce2458ff.png" type="image/x-icon">
+
 </head>
 <body class="is-boxed has-animations">
     <div class="body-wrap boxed-container">
