--- a/index.html
+++ b/index.html
@@ -340,8 +340,8 @@
                 <div class="container-sm">
                     <div class="media-inner section-inner">
                         <div class="media-header text-center">
-                            <h2 class="section-title mt-0">Meet Laurel</h2>
-                            <p class="section-paragraph mb-0">Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation.</p>
+                            <h2 class="section-title mt-0">$HK TIGER</h2>
+                            <p class="section-paragraph mb-0"> 🐯 We are a team, a vision, a determination to go to the moon</p>
                         </div>
 						<div class="media-canvas">
 							
